--- a/packages/@testuj.to/react/src/components/Button/styles.css
+++ b/packages/@testuj.to/react/src/components/Button/styles.css
@@ -14,3 +14,9 @@
     color: var(--color-button);
     background-color: var(--color-button-bg);
 }
+
+.tt-button.primary {
+}
+
+.tt-button.secondary {
+}
