--- a/packages/@testuj.to/react/src/components/Slider/styles.css
+++ b/packages/@testuj.to/react/src/components/Slider/styles.css
@@ -9,32 +9,34 @@
 }
 
 .tt-slider-track {
-  background-color: black;
+  background-color: #eeeff2;
   position: relative;
   flex-grow: 1;
-  border-radius: 9999px;
+  border-radius: 2px;
   height: 3px;
 }
 
 .tt-slider-range {
   position: absolute;
-  background-color: white;
-  border-radius: 9999px;
+  background-color: var(--color-primary);
+  border-radius: 2px;
   height: 100%;
 }
 
 .tt-slider-thumb {
   display: block;
-  width: 20px;
-  height: 20px;
+  width: 10px;
+  height: 10px;
   background-color: white;
-  box-shadow: 0 2px 10px black;
+  border: 4px solid var(--color-primary);
+  outline: 1px solid white;
   border-radius: 10px;
 }
 .tt-slider-thumb:hover {
-  background-color: violet;
+  outline: none;
+  box-shadow: 0 0 5px 2px rgb(218, 218, 218);
 }
 .tt-slider-thumb:focus {
   outline: none;
-  box-shadow: 0 0 0 5px black;
+  box-shadow: 0 0 5px 2px rgb(218, 218, 218);
 }
