🐛 Fix minor bugs

--- a/packages/@testuj.to/react/src/components/Tag/styles.css
+++ b/packages/@testuj.to/react/src/components/Tag/styles.css
@@ -1,7 +1,7 @@
 .tt-tag {
   background-color: var(--color-primary);
   border-radius: var(--border-radius);
-  color: var(--color-white);
+  color: #fff;
   padding: 0.2rem 0.5rem;
   border-radius: 4px;
 }
