--- a/packages/@testuj.to/react/src/components/Accordion/styles.css
+++ b/packages/@testuj.to/react/src/components/Accordion/styles.css
@@ -1,8 +1,6 @@
 .tt-accordion-root {
   border-radius: 6px;
   width: 100%;
-  background-color: var(--mauve6);
-  box-shadow: 0 2px 10px var(--blackA4);
   box-sizing: border-box;
 }
 
@@ -16,12 +14,6 @@
 }
 .tt-accordion-item:last-child {
   margin-bottom: 0;
-}
-
-.tt-accordion-item:focus-within {
-  position: relative;
-  z-index: 1;
-  box-shadow: 0 0 0 2px var(--mauve12);
 }
 
 .tt-accordion-header {
@@ -38,10 +30,8 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  font-size: 1rem;
-  font-weight: 500;
-  line-height: 1;
   color: var(--text-primary);
+  font: var(--text-normal-16-600);
   padding: 0 20px;
 }
 
@@ -52,9 +42,7 @@
 
 .tt-accordion-content {
   overflow: hidden;
-  font-size: 15px;
-  color: var(--mauve11);
-  background-color: var(--mauve2);
+  font: var(--text-normal-14)
 }
 
 .tt-accordion-inner-content {
