--- a/packages/@testuj.to/react/src/components/Checkbox/styles.css
+++ b/packages/@testuj.to/react/src/components/Checkbox/styles.css
@@ -1,36 +1,48 @@
-
 .tt-checkbox-container {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 .tt-checkbox-container > .tt-checkbox {
-    background-color: white;
-    width: 25px;
-    height: 25px;
-    border-radius: 4px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    box-shadow: 0 2px 10px var(--color-text);
+  background-color: white;
+  width: 25px;
+  height: 25px;
+  border-radius: 2px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* box-shadow: 0 2px 10px var(--color-text); */
+  border: 2px solid var(--color-border);
+  cursor: pointer;
 }
 
 .tt-checkbox-container > .tt-checkbox:hover {
-    background-color: var(--color-primary);
+  /* background-color: var(--color-primary); */
 }
 
 .tt-checkbox-container > .tt-checkbox:focus {
-    box-shadow: 0 0 0 2px black;
+  /* box-shadow: 0 0 0 2px black; */
 }
 
 .tt-checkbox-container > .tt-checkbox > .tt-checkbox-indicator {
-    color: var(--color-primary);
+  color: white;
+}
+
+.tt-checkbox-checkmark {
+  height: 22px;
+  width: 22px;
+  transform: translateY(2px);
+}
+
+.tt-checkbox[aria-checked="true"] {
+  background-color: var(--color-text);
+  border: 2px solid var(--color-text);
 }
 
 .tt-checkbox-container > .tt-checkbox-label {
-    /* color: white; */
-    padding-left: 15px;
-    font-size: 15px;
-    line-height: 1;
-    user-select: none;
+  /* color: white; */
+  padding-left: 15px;
+  font-size: 15px;
+  line-height: 1;
+  user-select: none;
 }
