--- a/packages/@testuj.to/react/src/components/Accordion/styles.css
+++ b/packages/@testuj.to/react/src/components/Accordion/styles.css
@@ -56,11 +56,10 @@
   animation: slideUp 300ms cubic-bezier(0.87, 0, 0.13, 1);
 }
 
-.AccordionChevron {
-  color: var(--violet10);
+.tt-accordion-chevron {
   transition: transform 300ms cubic-bezier(0.87, 0, 0.13, 1);
 }
-.AccordionTrigger[data-state="open"] > .AccordionChevron {
+.tt-accordion-trigger[data-state="open"] > .tt-accordion-chevron {
   transform: rotate(180deg);
 }
 
