--- a/packages/@testuj.to/react/src/components/Textarea/styles.css
+++ b/packages/@testuj.to/react/src/components/Textarea/styles.css
@@ -1,14 +1,17 @@
-
 .tt-textarea {
-    width: 100%;
-    flex: 1;
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 4px;
-    padding: 0 10px;
-    font-size: 15px;
-    line-height: 1;
-    color: var(--color-text);
-    box-shadow: 0 0 0 1px var(--color-primary);
+  width: 100%;
+  flex: 1;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 4px;
+  padding: 1rem;
+  line-height: 1;
+  color: var(--color-text);
+  border: 1px solid var(--color-border);
+}
+
+.tt-textarea:focus {
+  outline: none;
+  border: 2px solid var(--color-border);
 }
