--- a/packages/@testuj.to/react/src/components/Button/styles.css
+++ b/packages/@testuj.to/react/src/components/Button/styles.css
@@ -16,6 +16,8 @@
 }
 
 .tt-button.primary {
+  color: var(--color-button);
+  background-color: var(--color-button-bg);
 }
 
 .tt-button.primary:hover {
