--- a/packages/@testuj.to/react/src/components/DateRangePicker/styles.css
+++ b/packages/@testuj.to/react/src/components/DateRangePicker/styles.css
@@ -162,7 +162,7 @@
   z-index: 2;
 }
 
-.react-datepicker__day--range-start::before{
+.react-datepicker__day--range-start::before {
   content: "";
   background-color: black;
   position: absolute;
@@ -211,13 +211,16 @@
   background-color: rgba(13, 26, 51, 0.05);
 }
 
-.tt-datePicker-wrapper {
+.tt-datePicker-input {
   position: relative;
+  border-radius: 4px;
+  border: 1px solid var(--color-border);
+  display: flex;
+  align-items: center;
+  padding: 0.5rem;
+  cursor: pointer;
 }
 
 .tt-datePicker-icon {
-  position: absolute;
-  right: -1rem;
-  top: 50%;
-  transform: translateY(-50%);
+  margin-left: 1rem;
 }
