--- a/packages/@testuj.to/react/src/components/ProductCard/styles.css
+++ b/packages/@testuj.to/react/src/components/ProductCard/styles.css
@@ -1,8 +1,8 @@
-.tt-product-card-wrapper {
+.tt-product-card-warpper {
   display: flex;
-  align-items: center;
   flex-direction: column;
   max-width: 100%;
+  cursor: pointer;
 }
 
 .tt-product-card-main {
