--- a/packages/@testuj.to/react/src/components/Button/styles.css
+++ b/packages/@testuj.to/react/src/components/Button/styles.css
@@ -13,6 +13,7 @@
   color: var(--color-button);
   background-color: var(--color-button-bg);
   transition: all 0.2s;
+  box-sizing: border-box;
 }
 
 .tt-button.primary {
