--- a/packages/@testuj.to/react/src/components/Carousel/styles.css
+++ b/packages/@testuj.to/react/src/components/Carousel/styles.css
@@ -5,7 +5,7 @@
 .tt-carousel-wrapper-inner {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   cursor: grab;
 }
 
