--- a/packages/@testuj.to/react/src/components/CampaignHeroSection/LabeledIcon/styles.css
+++ b/packages/@testuj.to/react/src/components/CampaignHeroSection/LabeledIcon/styles.css
@@ -1,7 +1,13 @@
 .tt-labeled-icon-wrapper {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-start;
+  margin-right: 1rem;
 }
 
 .tt-labeled-icon-icon {
+  margin-right: 0.5rem;
 }
 
 .tt-labeled-icon-label {
