🐛 Fix border varaibale name

--- a/packages/@testuj.to/react/src/components/LikeButton/styles.css
+++ b/packages/@testuj.to/react/src/components/LikeButton/styles.css
@@ -15,6 +15,6 @@
 
 .tt-like-button.square {
   border-radius: 8px;
-  border: 1px solid var(--border-color);
+  border: 1px solid var(--color-border);
   padding: 0.5rem 1rem;
 }
