--- a/packages/@testuj.to/react/src/components/Timeline/styles.css
+++ b/packages/@testuj.to/react/src/components/Timeline/styles.css
@@ -74,12 +74,13 @@
 
 .tt-timeline__popup {
   position: absolute;
-  top: -90%;
+  top: 0;
   left: 0;
-  transform: translateX(-50%);
+  transform: translate(-50%, 15%);
+  color: #fff;
   background-color: var(--color-secondary);
   padding: 2px 8px;
-  z-index: 10;
+  z-index: 11;
   height: 25px;
   border-radius: 4px;
   width: fit-content;
@@ -90,11 +91,10 @@
   font-size: 0.9rem;
 }
 
-/* Popup arrow */
 .tt-timeline__popup::after {
   content: "";
   position: absolute;
-  top: 100%;
+  top: 99%;
   left: 50%;
   transform: translateX(-50%);
   border-width: 8px;
