--- a/packages/@testuj.to/react/src/components/ProgressBar/styles.css
+++ b/packages/@testuj.to/react/src/components/ProgressBar/styles.css
@@ -2,7 +2,7 @@
   position: relative;
   width: 100%;
   height: 100%;
-
+  border-radius: 4px;
   background-color: var(--color-border);
   overflow: hidden;
 }
