--- a/packages/@testuj.to/react/src/components/ProgressBar/styles.css
+++ b/packages/@testuj.to/react/src/components/ProgressBar/styles.css
@@ -39,4 +39,7 @@
   top: 50%;
   transform: translate(50%, -50%);
   right: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
