--- a/packages/@testuj.to/react/src/components/LikeButton/styles.css
+++ b/packages/@testuj.to/react/src/components/LikeButton/styles.css
@@ -3,6 +3,7 @@
   align-items: center;
   justify-content: center;
   cursor: pointer;
+  font: var(--font-normal-14-600);
 }
 
 .tt-like-button.circle {
