--- a/packages/@testuj.to/react/src/components/CampaignHeroSection/styles.css
+++ b/packages/@testuj.to/react/src/components/CampaignHeroSection/styles.css
@@ -94,6 +94,7 @@
     max-height: 100%;
     min-width: 100%;
     border-radius: 0;
+    padding-bottom: 2rem;
   }
   .tt-campaign-hero-section-image {
     width: 100%;
