--- a/packages/@testuj.to/react/src/components/Timeline/styles.css
+++ b/packages/@testuj.to/react/src/components/Timeline/styles.css
@@ -121,3 +121,61 @@
   border-radius: 4px;
   height: 0;
 }
+
+@media (max-width: 900px) {
+  .tt-timeline {
+    height: 100%;
+    width: 4px;
+    min-height: 100%;
+  }
+
+  .tt-timeline__wrapper {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+  }
+
+  .tt-timeline__steps {
+    flex-direction: column;
+    align-items: space-between;
+  }
+
+  .tt-timeline__progress {
+    height: 0;
+    width: 100%;
+  }
+
+  .tt-timeline__steps {
+    height: 100%;
+    justify-content: space-between;
+  }
+
+  .tt-timeline__step {
+    display: flex;
+    justify-content: flex-start;
+    padding-left: 1rem;
+    flex-direction: column;
+    align-items: flex-start;
+    height: 80px;
+  }
+
+  .tt-timeline__step_indicator {
+    left: 0;
+    top: 0;
+    transform: translate(-55%, 0);
+  }
+  /* 
+  .tt-timeline__step:first-child > .tt-timeline__step_indicator {
+    top: 0;
+    top: 0;
+    transform: translate(-55%, 0);
+  }
+
+  .tt-timeline__step:last-child > .tt-timeline__step_indicator {
+    top: auto;
+    bottom: 0;
+    transform: translate(-55%, 0);
+  } */
+}
