--- a/packages/@testuj.to/react/src/components/UserAvatar/styles.css
+++ b/packages/@testuj.to/react/src/components/UserAvatar/styles.css
@@ -10,13 +10,11 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 100%;
-  height: 100%;
+  width: 40px;
+  height: 40px;
 }
 
 .tt-user-avatar-image {
-  width: 100%;
-  height: 100%;
   object-fit: cover;
   border-radius: 50%;
   z-index: 0;
