--- a/packages/@testuj.to/react/src/components/UserMenu/styles.css
+++ b/packages/@testuj.to/react/src/components/UserMenu/styles.css
@@ -33,11 +33,11 @@
   line-height: 36px;
   display: flex;
   justify-content: flex-start;
-  transition: background-color 0.3s ease-in-out;
-  border-radius: 4px;
+  transition: background-color 0.2s ease-in-out;
+  border-radius: 8px;
   padding: 0 0.5rem;
 }
 
 .tt-user-menu_item:hover {
-  background-color: rgba(205, 205, 205, 0.402);
+  background-color: #f0f2f4;
 }
