--- a/packages/@testuj.to/react/src/components/CampaignHeroSection/styles.css
+++ b/packages/@testuj.to/react/src/components/CampaignHeroSection/styles.css
@@ -9,7 +9,7 @@
   width: 100%;
   min-width: 1000px;
   max-height: 340px;
-  max-width: 100;
+  max-width: 100%;
 }
 
 .tt-campaign-hero-section h5 {
@@ -28,6 +28,19 @@
   max-width: 100%;
   object-fit: cover;
   min-height: 340px;
+}
+
+.tt-campaign-hero-section-small {
+  min-width: 1000px;
+  height: 200px;
+}
+
+.tt-campaign-hero-section-small img {
+  width: 320px;
+  max-width: 100%;
+  height: 200px;
+  object-fit: cover;
+  min-height: 200px;
 }
 
 .tt-campaign-hero-section-content {
