🐛 Fix Select width issues

--- a/packages/@testuj.to/react/src/components/Select/styles.css
+++ b/packages/@testuj.to/react/src/components/Select/styles.css
@@ -12,6 +12,7 @@
   border: 1px solid var(--color-border);
   width: 100%;
   text-align: left;
+  box-sizing: border-box;
 }
 
 .tt-select-trigger:focus {
