--- a/packages/@testuj.to/react/src/components/Textarea/styles.css
+++ b/packages/@testuj.to/react/src/components/Textarea/styles.css
@@ -13,5 +13,5 @@
 
 .tt-textarea:focus {
   outline: none;
-  border: 2px solid var(--color-border);
+  box-shadow: 0 0 0 1px var(--color-border);
 }
