--- a/packages/@testuj.to/react/src/components/Slider/styles.css
+++ b/packages/@testuj.to/react/src/components/Slider/styles.css
@@ -4,8 +4,9 @@
   align-items: center;
   user-select: none;
   touch-action: none;
-  width: 200px;
+  width: 100%;
   height: 20px;
+  box-sizing: border-box;
 }
 
 .tt-slider-track {
@@ -38,5 +39,18 @@
 }
 .tt-slider-thumb:focus {
   outline: none;
-  box-shadow: 0 0 5px 2px rgb(218, 218, 218);
+  box-shadow: 0 0 3px 2px rgb(218, 218, 218);
+}
+
+.tt-slider-range.secondary {
+  background-color: var(--color-secondary);
+}
+
+.tt-slider-thumb.secondary {
+  display: block;
+  width: 16px;
+  height: 16px;
+  background-color: var(--color-secondary);
+  border: 3px solid white;
+  border-radius: 50%;
 }
