--- a/packages/@testuj.to/react/src/components/DashedBarChart/styles.css
+++ b/packages/@testuj.to/react/src/components/DashedBarChart/styles.css
@@ -1,7 +1,7 @@
 .tt-dashed-bar-chart {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: space-between;
   justify-content: space-between;
   width: 100%;
 }
@@ -15,7 +15,7 @@
 }
 
 .tt-dashed-bar-chart__item:not(:last-child) {
-  margin-bottom: 1rem;
+  margin-bottom: 1.3rem;
 }
 
 .tt-dashed-bar-chart__item__label {
@@ -49,7 +49,7 @@
   border-radius: 6px;
   overflow: hidden;
   margin-right: 0.5rem;
-  background-color: var(--color-border);
+  background-color: var(--light-gray);
 }
 
 .tt-dashed-bar-chart__item__bar__dash_fill {
