--- a/packages/@testuj.to/react/src/components/RatingBarChart/styles.css
+++ b/packages/@testuj.to/react/src/components/RatingBarChart/styles.css
@@ -66,6 +66,7 @@
   border-radius: 0.25rem;
   background-color: #30a9d4;
   z-index: 3;
+  transition: width 0.6s ease-in-out;
 }
 
 .tt-rating-bar-chart__item__bar__label {
