--- a/packages/@testuj.to/react/src/components/Dialog/styles.css
+++ b/packages/@testuj.to/react/src/components/Dialog/styles.css
@@ -10,6 +10,7 @@ input {
   opacity: 0.8;
   position: fixed;
   inset: 0;
+  z-index: 9998;
   animation: overlayShow 150ms cubic-bezier(0.16, 1, 0.3, 1);
 }
 
@@ -24,6 +25,7 @@ input {
   max-width: 450px;
   max-height: 85vh;
   padding: 25px;
+  z-index: 9999;
   animation: contentShow 150ms cubic-bezier(0.16, 1, 0.3, 1);
 }
 .tt-dialog-content:focus {
