--- a/packages/@testuj.to/react/src/components/Carousel/styles.css
+++ b/packages/@testuj.to/react/src/components/Carousel/styles.css
@@ -15,7 +15,7 @@
   align-items: center;
   justify-content: flex-start;
   cursor: grab;
-  /* transition: transform 100ms; */
+  transition: transform 200ms;
 }
 
 .tt-carousel-wrapper-inner:active {
