--- a/packages/@testuj.to/react/src/components/CampaignHeroSection/styles.css
+++ b/packages/@testuj.to/react/src/components/CampaignHeroSection/styles.css
@@ -10,6 +10,7 @@
   min-width: 1000px;
   max-height: 340px;
   max-width: 100%;
+  position: relative;
 }
 
 .tt-campaign-hero-section h5 {
@@ -37,6 +38,7 @@
 
 .tt-campaign-hero-section-small img {
   width: 320px;
+  min-width: 320px;
   max-width: 100%;
   height: 200px;
   object-fit: cover;
@@ -44,6 +46,7 @@
 }
 
 .tt-campaign-hero-section-content {
+  width: 100%;
   padding: 3rem;
   display: flex;
   align-items: flex-start;
@@ -62,6 +65,14 @@
   flex-direction: row;
   align-items: center;
   justify-content: flex-start;
+}
+
+.tt-campaign-hero-section-row-space-between {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-end;
+  justify-content: space-between;
+  width: 100%;
 }
 
 .tt-campaign-hero-section-alert {
@@ -99,6 +110,11 @@
   justify-content: center;
   cursor: pointer;
   display: none;
+}
+
+.tt-campaign-hero-section-button-small {
+  right: 24px;
+  bottom: 24px;
 }
 
 @media (max-width: 900px) {
