--- a/packages/@testuj.to/react/src/components/Button/styles.css
+++ b/packages/@testuj.to/react/src/components/Button/styles.css
@@ -72,6 +72,7 @@
 
 .tt-button.success:hover {
   border: 1px solid var(--color-button-success-border-hover);
+  background-color: var(--color-button-success-bg-hover);
 }
 
 .tt-button.success:disabled:hover {
