--- a/packages/@testuj.to/react/src/components/RadioGroup/styles.css
+++ b/packages/@testuj.to/react/src/components/RadioGroup/styles.css
@@ -1,53 +1,59 @@
-
 .tt-radio-group {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.tt-radio-group.horizontal {
+  flex-direction: row;
 }
 
 .tt-radio-group > .tt-radio {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 .tt-radio-group > .tt-radio > .tt-radio-item {
-    width: 25px;
-    height: 25px;
-    border-radius: 100%;
-    box-shadow: 0 2px 10px black;
-    background-color: white;
+  width: 18px;
+  height: 18px;
+  border-radius: 100%;
+  background-color: white;
+  border: 2px solid var(--color-text);
+  cursor: pointer;
+  transition: background-color 0.2s ease-in-out;
 }
 
 .tt-radio-group > .tt-radio > .tt-radio-item:hover {
-    background-color: var(--color-primary);
+  background-color: rgb(244, 244, 244);
 }
 
 .tt-radio-group > .tt-radio > .tt-radio-item:focus {
-    box-shadow: 0 0 0 2px black;
+  /* box-shadow: 0 0 0 2px black; */
 }
 
 .tt-radio-group > .tt-radio > .tt-radio-item > .tt-radio-indicator {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 100%;
-    position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  position: relative;
 }
 
 .tt-radio-group > .tt-radio > .tt-radio-item > .tt-radio-indicator::after {
-    content: '';
-    display: block;
-    width: 11px;
-    height: 11px;
-    border-radius: 50%;
-    background-color: var(--color-primary);
+  content: "";
+  display: block;
+  width: 11px;
+  height: 11px;
+  border-radius: 50%;
+  background-color: var(--color-text);
 }
 
 .tt-radio-group > .tt-radio > .tt-radio-label {
-    color: var(--color-text);
-    font-size: 15px;
-    line-height: 1;
-    user-select: none;
-    padding-left: 15px;
+  color: var(--color-text);
+  font-size: 15px;
+  line-height: 1;
+  user-select: none;
+  padding-left: 10px;
+  cursor: pointer;
 }
