--- a/packages/@testuj.to/react/src/components/ImageViewer/styles.css
+++ b/packages/@testuj.to/react/src/components/ImageViewer/styles.css
@@ -1,5 +1,7 @@
 .tt-image-viewer {
   position: relative;
+  max-width: 80ww;
+  max-width: 90vh;
 }
 
 .tt-image-viewer img {
@@ -16,7 +18,7 @@
   z-index: 50000;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.3);
+  background-color: rgba(0, 0, 0, 0.4);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -27,12 +29,22 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  width: 100%;
+  width: 98%;
   position: absolute;
   top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .tt-image-viewer-controls__button {
   cursor: pointer;
   color: #fff;
+  background-color: rgba(0, 0, 0, 0.4);
+  border: none;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
